Added a poem to Basic_HTML_5.html and added text-shadow to Basic_CSS_2

--- a/Basic_HTML_5.html
+++ b/Basic_HTML_5.html
@@ -5,4 +5,25 @@
   </body>
   <p>Styled font.</p>
   <p>&euro; €</p>
+  <section>
+    <h1>Poetry</h1>
+    <p>
+      This is a two-line
+      <span style="text-decoration: underline">poem</span><br />
+      So crazy you wouldn't&nbsp;know'em&copy;
+    </p>
+  </section>
+  <form id="form">
+    <label for="first_name">First name:</label><br />
+    <input type="text" id="first_name" /><br />
+    <label for="last_name">Last name:</label><br />
+    <input type="text" id="last_name" /><br />
+    <label for="email">Your email address:</label><br />
+    <input type="email" id="email" /><br />
+    <label for="sub">Subject:</label><br />
+    <input type="text" id="sub" /><br />
+    <label for="message">Send us a message:</label><br />
+  </form>
+  <textarea form="form" rows="10" cols="70"></textarea>
+  <input form="form" type="submit" />
 </html>
